2007-08-10  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/tsfile.cpp:
		Also detect teletext and subtitle streams. We may
		not be able to use them, but it's good to know that
		they're there.

2007-08-03  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/tsfile.h:
	* src/tsfile.cpp:
		Add SI table parser.

2007-08-02  Michael Riepe  <too-tired@users.sourceforge.net>

	* SConstruct:
		Check for libswscale.

	* src/avframe.h:
	* src/avframe.cpp:
		Use libswscale if present (patch by Michael Kreuzer).

	* src/Makefile.w32:
		Also scan Makefile.w32 for id keyword.

2007-07-30  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Set svn:keywords property.

2007-07-28  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Fix "versioned" build on Windows.

2007-07-28  Michael Riepe  <too-tired@users.sourceforge.net>

	* SConstruct:
	* src/avframe.h:
	* src/lavfmuxer.cpp:
	* src/lavfmuxer.h:
	* src/main.cpp:
	* src/mpgfile.cpp:
	* src/mpgfile.h:
	* src/psfile.cpp:
	* src/stream.h:
	* src/tsfile.cpp:
		Ffmpeg interface cleanup patch by Wolfram Gloger.

2007-07-28  Michael Riepe  <too-tired@users.sourceforge.net>

	* VERSION:
	* setversion.sh:
		New files.

	* src/SConscript:
	* src/Makefile.w32:
		Generate version.h.

	* src/dvbcut.cpp:
		Include version string in caption.

2007-07-23  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Reset inbuffer only if there are new input files.

2007-07-11  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/Makefile.w32:
		Add explicit dependencies for moc and uil files.

	* numerous other files:
		Add "Id" keyword.

2007-07-10  Michael Riepe  <too-tired@users.sourceforge.net>

	* src/dvbcut.cpp:
		Write to log instead of stderr.
		Redirect log to stderr if there is no GUI.

	* src/logoutput.cpp:
		Simplify code, avoid memory allocations.
		Don't prefix each line with a progress indicator.
 
	* src/mpgfile.cpp:
		Write to log instead of stderr.
 