@@ -1,3 +1,8 @@
+2007-08-15  Michael Riepe  <too-tired@users.sourceforge.net>
+
+	* src/tsfile.cpp:
+		Improved SI table parser and stream detection.
+
 2007-08-10  Michael Riepe  <too-tired@users.sourceforge.net>
 
 	* src/tsfile.cpp:
